--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <img src="images/logo.png" class="logo">
             <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
+                <!-- <li><a href="#header">Home</a></li> -->
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Projects</a></li>
                 <li><a href="#footer">Contact</a></li>
@@ -89,24 +89,26 @@
                 <img src="images/project1.png">
                 <div class="layer">
                     <h3>IPL Data Analysis</h3>
-                    <p>hello just wait for while i will give you update</p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <p>Providing a solution of IPL historical matches information
+                       With its Dashboard.
+                    </p>
+                    <a href="https://sohal619.github.io/ipl-data-analysis/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/project2.png">
                 <div class="layer">
                     <h3>LinkedIn Job Analysis</h3>
-                    <p>hello just wait for while i will give you update</p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <p>A job finding solution powered by LinkedIn.</p>
+                    <a href="https://sohal619-linkedin-job-analysis-user-interfaceindex-sao7ss.streamlit.app/"><i class="fas fa-external-link-alt"></i></a>
                 </div>            
             </div>
             <div class="work">
                 <img src="images/project3.png">
                 <div class="layer">
-                    <h3>Infosys and TCS Stocks Analysis</h3>
-                    <p>hello just wait for while i will give you update</p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <h3>Infosys VS TCS Stocks Analysis</h3>
+                    <p>A solution of in-depth Exploratory Data Analysis with a comparison of 2 organizations' Stocks.</p>
+                    <a href="https://sohal619.github.io/Infosys-VS-Tcs/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
@@ -121,7 +123,7 @@
 <p align="center">Copyright &copy; SOHAL 2023</p>
 
 <!-- ------------- go up button --------------- -->
-<a href="#" class="to-top">
+<a href="#header" class="to-top">
     <i class="fas fa-chevron-up"></i>
 </a>
 
